--- a/src/style/Page.css
+++ b/src/style/Page.css
@@ -21,8 +21,8 @@
 
 .Page-content {
   background-color: #282c34;
-  /* min-height: 100vh; */
-  margin-bottom: 2em;
+  min-height: 90vh;
+  /* margin-bottom: 2em; */
   display: flex;
   flex-direction: column;
   align-items: center;
